# my-first-angular-bazel-app

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  angular.json  bazel-bin  bazel-my-first-angular-bazel-app  bazel-testlogs  defs.bzl  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json
src/: BUILD.bazel  index.html
src/app/: app.component.spec.ts  app.component.ts
tools/: BUILD.bazel  ng.bzl  ngc.esbuild.ts  sass.bzl  sass_workaround.bzl  test-bootstrap.js  ts.bzl
